--- a/.github/workflows/push-helm-chart.yml
+++ b/.github/workflows/push-helm-chart.yml
@@ -20,7 +20,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Push Helm Chart to ChartMuseum
-        uses: bsord/cf-helm-push@v14.0.3
+        uses: bsord/cf-helm-push@v14.0.4
         with:
           access-token: ${{ secrets.CF_API_KEY }}
           repository-url: 'cm://h.cfcr.io/fairbanks.io/default'
+          force: true
+          chart-folder: chart
