--- a/.github/workflows/push-helm-chart-manual.yml
+++ b/.github/workflows/push-helm-chart-manual.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: 'Push Helm Chart'
+name: 'Push Helm Chart Manual'
 
 on: 
   workflow_dispatch:
