--- a/.github/workflows/push-helm-chart-on-merge.yml
+++ b/.github/workflows/push-helm-chart-on-merge.yml
@@ -19,6 +19,6 @@ jobs:
         uses: bsord/cf-helm-push@v14.0.8
         with:
           access-token: ${{ secrets.CF_API_KEY }}
-          repository-url: 'cm://helm.bsord.dev/fairbanks.io/default'
+          repository-url: 'cm://h.cfcr.io/fairbanks.io/default'
           force: true
           chart-folder: chart
