--- a/.github/workflows/push-helm-chart-manual.yml
+++ b/.github/workflows/push-helm-chart-manual.yml
@@ -12,9 +12,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Push Helm Chart to ChartMuseum
-        uses: bsord/cf-helm-push@v14.0.8
+        uses: bsord/cf-helm-push@v1
         with:
           access-token: ${{ secrets.CF_API_KEY }}
-          repository-url: 'cm://helm.bsord.dev/fairbanks.io/default'
+          repository-url: 'cm://h.cfcr.io/fairbanks.io/default'
           force: true
           chart-folder: chart
