--- a/.github/workflows/push-helm-chart-manual.yml
+++ b/.github/workflows/push-helm-chart-manual.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Push Helm Chart to ChartMuseum
-        uses: bsord/cf-helm-push@v1
+        uses: bsord/helm-push@v1
         with:
           access-token: ${{ secrets.CF_API_KEY }}
           repository-url: 'cm://h.cfcr.io/fairbanks.io/default'
