--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: pretty-default-backend
-description: A Helm chart for Kubernetes
+description: A simple good looking yet neutral backend for nginx ingress controller
 
 # A chart can be either an 'application' or a 'library' chart.
 #
