--- a/.github/workflows/push-helm-chart-manual.yml
+++ b/.github/workflows/push-helm-chart-manual.yml
@@ -15,6 +15,6 @@ jobs:
         uses: bsord/helm-push@v1
         with:
           access-token: ${{ secrets.CF_API_KEY }}
-          repository-url: 'cm://h.cfcr.io/fairbanks.io/default'
+          repository-url: 'https://h.cfcr.io/fairbanks.io/default'
           force: true
           chart-folder: chart
