--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -15,7 +15,7 @@ on:
 
 env:
   # TODO: Change variable to your image's name.
-  IMAGE_NAME: bsord/helm-push
+  IMAGE_NAME: bsord/pretty-default-backend
 
 jobs:
   # Run tests.
