Allow passing bg color as variable

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 1
 
 image:
-  repository: fairbanksio/pretty-default-backend
-  pullPolicy: IfNotPresent
+  repository: bsord/pretty-default-backend
+  pullPolicy: Always
 
 imagePullSecrets: []
 nameOverride: ""
