--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -33,11 +33,11 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: /healthz
               port: 8080
           readinessProbe:
             httpGet:
-              path: /
+              path: /healthz
               port: 8080
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
