Update chart to support env passing of bg color

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 image:
   repository: bsord/pretty-default-backend
   pullPolicy: Always
-
+bgColor: "#334455"
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
