Rework mimetype handling, add json support, add variables

--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -44,6 +44,8 @@ spec:
           env:          
             - name: "BG_COLOR"
               value: "{{ .Values.bgColor }}"
+            - name: "BRANDING_TEXT"
+              value: "{{ .Values.brandingText }}"
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
