--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -80,6 +80,6 @@ jobs:
         uses: bsord/helm-push@v1
         with:
           access-token: ${{ secrets.CF_API_KEY }}
-          repository-url: 'https://h.cfcr.io/fairbanks.io/default'
+          repository-url: 'https://h.cfcr.io/bsord/charts'
           force: true
           chart-folder: chart
