--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -24,6 +24,10 @@ serviceAccount:
   name:
 autoscaling:
   enabled: false
+  minReplicas: 2
+  maxReplicas: 10
+  targetCPUUtilizationPercentage: 50
+  targetMemoryUtilizationPercentage: 75
 podSecurityContext: {}
   # fsGroup: 2000
 
